--- a/style.css
+++ b/style.css
@@ -20,11 +20,11 @@ body{
     transition: transform 1s;
 }
 .scene:hover .card{
-    transform: rotate(180deg);
+    transform: rotateY(180deg);
 
 }
 .card_face{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
